# anvesana

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  config.py  llm.py  main.py  rag.py
app/utils/: logger.py
data/: __init__.py  chunk.py  ingest.py  main.py
